# offline-assistant

./: .gitignore  README.md  app.py  config.yaml  main.py  ocr.py  pyproject.toml  visualize.py
src/: __init__.py  chain.py  config.py  file_utils.py  indexing.py  tools.py
